# enneade

./: .gitignore  CMakeLists.txt  Contributing.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
packaging/: install.cmake
packaging/windows/: enneade.cmd  enneade_env.cmd  enneade_env.cmd.in
packaging/windows/nsis/: EnneadePrerequisiteFunc.nsh  README.md  enneade.nsi  run_makensis.bat
src/: CMakeLists.txt  KMClassifierEvaluationTask.cpp  KMCluster.cpp  KMClustering.cpp  KMClusteringInitializer.cpp  KMClusteringMiniBatch.cpp  KMClusteringQuality.cpp  KMLearningProblem.cpp  KMLearningProblemView.cpp  KMLearningProject.cpp  KMPredictor.cpp  KMPredictor.h  KMPredictorEvaluationTask.cpp  KMPredictorEvaluator.cpp  KMRandomInitialisationTask.cpp  main.cpp
src/application/: KMLearningProject.cpp  KMLearningProject.h
src/domain/clustering/: KMAttributesPartitioningManager.cpp  KMAttributesPartitioningManager.h  KMCluster.cpp  KMCluster.h  KMClusterInstance.cpp  KMClusterInstance.h  KMClustering.cpp  KMClustering.h  KMClusteringInitializer.cpp  KMClusteringInitializer.h  KMClusteringMiniBatch.cpp  KMClusteringMiniBatch.h  KMClusteringQuality.cpp  KMClusteringQuality.h  KMParameters.cpp  KMParameters.h  KMRandomInitialisationTask.cpp  KMRandomInitialisationTask.h
src/domain/evaluation/: KMAnalysisResults.h  KMClassifierEvaluation.cpp  KMClassifierEvaluation.h  KMClassifierEvaluationTask.cpp  KMClassifierEvaluationTask.h  KMPredictorEvaluation.cpp  KMPredictorEvaluation.h  KMPredictorEvaluationTask.cpp  KMPredictorEvaluationTask.h  KMPredictorEvaluator.cpp  KMPredictorEvaluator.h  KMPredictorReport.cpp  KMPredictorReport.h
src/domain/learning/: KMLearningBenchmark.cpp  KMLearningBenchmark.h  KMLearningProblem.cpp  KMLearningProblem.h  KMModelingSpec.cpp  KMModelingSpec.h  KMPredictor.cpp  KMPredictor.h  KMPredictorKNN.cpp  KMTrainedClassifier.cpp  KMTrainedClassifier.h  KMTrainedPredictor.cpp  KMTrainedPredictor.h
src/domain/preprocessing/: KMClassStats.cpp  KMClassStats.h
src/ui/views/: KMAnalysisResultsView.cpp  KMAnalysisResultsView.h  KMLearningProblemView.cpp  KMLearningProblemView.h  KMModelingSpecView.cpp  KMModelingSpecView.h  KMParametersView.cpp  KMParametersView.h  KMPredictorEvaluatorView.cpp  KMPredictorEvaluatorView.h  KMPredictorKNNView.cpp  KMPredictorKNNView.h  KMPredictorView.cpp  KMPredictorView.h
tests/: CMakeLists.txt  IrisDatasetFixture.h  TestClustering.cpp  TestMain.cpp
tests/clustering/: TestClustering.cpp
tests/fixtures/: ClusteringTestSuite.cpp  ClusteringTestSuite.h
